--- a/src/SunlightCongress/project.json
+++ b/src/SunlightCongress/project.json
@@ -6,11 +6,7 @@
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "dnx451": {
-      "frameworkAssemblies": {
-        "System.Net": "4.0.0.0"
-      }
-    }
+    "dnx451": { }
   },
   "dependencies": {
     "Newtonsoft.Json": "7.0.1"
